[gd_scene load_steps=6 format=3 uid="uid://js0da42ak2rl"]

[ext_resource type="Script" path="res://Levels/credits.gd" id="1_2v4nm"]
[ext_resource type="Texture2D" uid="uid://sposeotysovc" path="res://assets/backbutton.png" id="2_xkbu3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mf4w8"]
atlas = ExtResource("2_xkbu3")
region = Rect2(0, 0, 33, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pe17"]
atlas = ExtResource("2_xkbu3")
region = Rect2(33, 0, 33, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_vd1xq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mf4w8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pe17")
}],
"loop": true,
"name": &"Back to end",
"speed": 5.0
}]

[node name="credits" type="Node2D"]
script = ExtResource("1_2v4nm")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Credit" type="Label" parent="."]
offset_left = -92.0
offset_top = -316.0
offset_right = 79.0
offset_bottom = -247.0
theme_override_font_sizes/font_size = 50
text = "Credits"

[node name="Shrimp" type="Label" parent="."]
offset_left = 323.0
offset_top = -192.0
offset_right = 468.0
offset_bottom = -157.0
theme_override_font_sizes/font_size = 25
text = "Shrimp
"

[node name="Name" type="Label" parent="Shrimp"]
layout_mode = 0
offset_left = -1.0
offset_top = 31.0
offset_right = 122.0
offset_bottom = 54.0
text = "Artist : Tio D
"

[node name="penguin" type="LinkButton" parent="Shrimp/Name"]
layout_mode = 0
offset_left = -1.0
offset_top = 20.0
offset_right = 148.0
offset_bottom = 47.0
text = "Source:FreeP!k"

[node name="Tilemap template" type="Label" parent="."]
offset_left = -102.0
offset_top = -196.0
offset_right = 110.0
offset_bottom = -161.0
theme_override_font_sizes/font_size = 25
text = "Tilemap template"

[node name="Name" type="Label" parent="Tilemap template"]
layout_mode = 0
offset_left = -1.0
offset_top = 31.0
offset_right = 122.0
offset_bottom = 54.0
text = "Artist : Chris Bradfield
"

[node name="tilemap" type="LinkButton" parent="Tilemap template/Name"]
layout_mode = 0
offset_left = -1.0
offset_top = 20.0
offset_right = 148.0
offset_bottom = 47.0
text = "Source: Kid scan codes"

[node name="Background" type="Label" parent="."]
offset_left = -470.0
offset_top = -197.0
offset_right = -325.0
offset_bottom = -162.0
theme_override_font_sizes/font_size = 25
text = "Background
"

[node name="Name2" type="Label" parent="Background"]
layout_mode = 0
offset_left = -1.0
offset_top = 31.0
offset_right = 122.0
offset_bottom = 54.0
text = "Artist : Admurin
"

[node name="Background" type="LinkButton" parent="Background/Name2"]
layout_mode = 0
offset_left = -1.0
offset_top = 20.0
offset_right = 148.0
offset_bottom = 47.0
text = "Source: Art Station"

[node name="Tilemap template2" type="Label" parent="."]
offset_left = 134.0
offset_top = -194.0
offset_right = 346.0
offset_bottom = -159.0
theme_override_font_sizes/font_size = 25
text = "Tilemap"

[node name="Name" type="Label" parent="Tilemap template2"]
layout_mode = 0
offset_left = -1.0
offset_top = 31.0
offset_right = 161.0
offset_bottom = 54.0
text = "Artist :  Zuhria Alfitra 
"

[node name="tilemaptemplate" type="LinkButton" parent="Tilemap template2/Name"]
layout_mode = 0
offset_left = -1.0
offset_top = 20.0
offset_right = 159.0
offset_bottom = 47.0
text = "Source: Game Art 2D"

[node name="Penguin" type="Label" parent="."]
offset_left = -272.0
offset_top = -197.0
offset_right = -127.0
offset_bottom = -162.0
theme_override_font_sizes/font_size = 25
text = "Penguin
"

[node name="Name" type="Label" parent="Penguin"]
layout_mode = 0
offset_left = -1.0
offset_top = 31.0
offset_right = 122.0
offset_bottom = 54.0
text = "Artist : Caz Creates
"

[node name="penguin" type="LinkButton" parent="Penguin/Name"]
layout_mode = 0
offset_left = -1.0
offset_top = 20.0
offset_right = 148.0
offset_bottom = 47.0
text = "Source: Itch io"

[node name="Information" type="Label" parent="."]
offset_left = -88.0
offset_top = -104.0
offset_right = 86.0
offset_bottom = -62.0
theme_override_font_sizes/font_size = 30
text = "Information"

[node name="Bluepenguin text" type="Label" parent="Information"]
layout_mode = 0
offset_left = -296.0
offset_top = 44.0
offset_right = 506.0
offset_bottom = 223.0
text = "The blue penguin, also called the little penguin, is a penguin species that is native to New Zealand.
 They get their name from their distinct blue plumage on its body, and are primarily found 
along the coast of the South Island. While these penguins are not currently endangered, 
their population is declining, and if action is not taken, we may lose another native bird of New Zealand. 
To find more information about these penguins and what you could do, visit websites 
made by The NZ Penguin Initiative, or the West Coast Penguin Trust to see what these 
organisations are doing to protect the penguins of New Zealand."

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-430.687, 244.028)
scale = Vector2(5.55677, 5.37151)
sprite_frames = SubResource("SpriteFrames_vd1xq")
animation = &"Back to end"
autoplay = "Back to end"

[node name="TextureButton" type="TextureButton" parent="AnimatedSprite2D"]
offset_left = -16.0
offset_top = -8.0
offset_right = 17.0
offset_bottom = 8.0

[connection signal="pressed" from="Shrimp/Name/penguin" to="." method="_on_penguin_pressed"]
[connection signal="pressed" from="Tilemap template/Name/tilemap" to="." method="_on_tilemap_pressed"]
[connection signal="pressed" from="Background/Name2/Background" to="." method="_on_background_pressed"]
[connection signal="pressed" from="Tilemap template2/Name/tilemaptemplate" to="." method="_on_tilemaptemplate_pressed"]
[connection signal="pressed" from="Penguin/Name/penguin" to="." method="_on_penguin_pressed"]
[connection signal="pressed" from="AnimatedSprite2D/TextureButton" to="." method="_on_texture_button_pressed"]
